[package]
name = "rust-axum-pg-example"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
axum = "=0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1.3", features = ["default", "serde"] }
tokio-postgres = { version = "0.7.11" , features = ["with-uuid-1", "with-serde_json-1"] }
#bb8-postgres = { version = "0.8.1", features = ["with-serde_json-1", "with-uuid-1"] }
